--- a/src/video.css
+++ b/src/video.css
@@ -1,10 +1,15 @@
 .bg-video{
     position: relative;
-    z-index: -1;
-    opacity: .2;
-    overflow: hidden;
+}
+
+.bg_video_content {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
+    overflow: hidden;
     object-fit: cover;
 }
 
@@ -15,9 +20,19 @@
     cursor: pointer;
 }
 
+
+
 .background_for_li {
-    background-color: inherit;
-    cursor: pointer !important;
+    background-color: rgba(255,255,255, .2);
+    z-index: 1;
+    width: 200px;
+    transition: all .3s ease-in-out;
 }
 
+
+.background_for_li:hover {
+    cursor: pointer;
+    background-color: rgba(255,255,255, .6);
+    transform: translateX(10px) scale(1.1);
+}
 
