add about, contac and footer components

--- a/src/navbar/navbar.styles.css
+++ b/src/navbar/navbar.styles.css
@@ -28,12 +28,13 @@
 
 .background {
     text-transform: uppercase;
+    background-image: linear-gradient(to right, #1b62a5, #01012b);
 }
 
 .link_color {
-    
     font-weight: bold;
     transition: all .3s ease-in-out;
+    
 }
 
 .link_color:hover {
