--- a/src/home/home.styles.css
+++ b/src/home/home.styles.css
@@ -20,7 +20,39 @@
     cursor: pointer;
 }
 
+@media (max-width: 575.98px) { 
+  .mini_navbar {
+    top : 600px;
+    left : 50px;
+    cursor: pointer;
+ }
+ .bg_video_content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    object-fit: cover;
+}
+}
 
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    .mini_navbar {
+        top : 600px;
+        left : 50px;
+        cursor: pointer;
+     }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .mini_navbar {
+        top : 600px;
+        left : 70px;
+        cursor: pointer;
+     }
+}
 
 .background_for_li {
     background-color: rgba(255,255,255, .2);
