--- a/src/navbar/navbar.styles.css
+++ b/src/navbar/navbar.styles.css
@@ -1,52 +1,47 @@
 .youtube_icon {
-  width: 20px;
-  height: 20px;
-  margin-left: 10px;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
 }
 
-.instagram_icon {
-  width: 18px;
-  height: 18px;
-  background: #d6249f;
-  background: radial-gradient(
-    circle at 30% 107%,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
-  );
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+.instagram_icon{
+    width: 18px;
+    height: 18px;
+    background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
   border-radius: 5px;
 }
 
 .facebook_icon {
-  width: 15px;
-  height: 15px;
+    width: 15px;
+    height: 15px;
 }
 
 .flag_icon {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  margin-left: 10px;
-  padding: 2px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    margin-left: 10px;
+    padding: 2px;
 }
 
+
 .background {
-  text-transform: uppercase;
-  background-image: linear-gradient(to right, #1b62a5, #01012b);
+    text-transform: uppercase;
+    background-image: linear-gradient(to right, #1b62a5, #01012b);
 }
 
 .link_color {
-  font-weight: bold;
-  transition: all 0.3s ease-in-out;
+    font-weight: bold;
+    transition: all .3s ease-in-out;
+    
 }
 
 .link_color:hover {
-  transform: scale(1.1);
+    transform:  scale(1.1)
 }
 
 .margin_left {
-  margin-left: 50px;
+    margin-left: 50px;
 }
