--- a/src/login/Login.styles.css
+++ b/src/login/Login.styles.css
@@ -20,6 +20,7 @@
   padding: 15px;
 }
 #form {
+  text-align: center;
   width: 100%;
   height: 100%;
   display: block;
@@ -31,6 +32,7 @@
   color: #fff;
 }
 .form-group .form-control {
+  text-align: center;
   margin: 1em 0;
   background-color: #222222;
   color: #fff;
@@ -55,4 +57,7 @@
   color: #1e90ff;
   border-width: 1px;
   padding: 6px;
+}
+#hiddenButton {
+  display: none;
 }
