--- a/src/projects/Projects.style.css
+++ b/src/projects/Projects.style.css
@@ -1,10 +1,59 @@
-.project_content {
-    background-image: linear-gradient(to right, #1b62a5, #01012b);
-    color: white;
-    transition: all .3s ease-in-out;
+.project_container {
+    width: 100%; 
+    height: 1500px;
+    position: relative;
+    background-image: url(../images/landing03.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
-.project_content:hover {
-   transform: scale(1.05);
-   cursor: pointer;
+.project_title { 
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    color: #22366e;
 }
+
+.card_project_content{
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(3,41,165, .7);
+    width: 60%;
+    height: auto;
+    color: white;
+}
+.project_content_title {
+    margin: 0 auto;
+    background-color: rgba(3,41,165, .7);
+    width: 60%;
+    height: 20rem;
+    color: white;
+}
+
+/* .project_content_title_scn {
+    position: absolute;
+    top: 35rem;
+    left: 15%;
+    background-color: rgba(3,41,165, .7);
+    width: 60%;
+    height: 20rem;
+    color: white;
+}
+
+.project_content_title_thr {
+    position: absolute;
+    top: 62rem;
+    left: 15%;
+    background-color: rgba(3,41,165, .7);
+    width: 60%;
+    height: 20rem;
+    color: white;
+} */
