--- a/src/projects/Projects.style.css
+++ b/src/projects/Projects.style.css
@@ -1,6 +1,6 @@
 .project_container {
     width: 100%; 
-    height: 1500px;
+    height: 1600px;
     position: relative;
     background-image: url(../images/landing03.jpg);
     background-position: center;
@@ -13,7 +13,7 @@
 
 .project_title { 
     position: absolute;
-    top: 2%;
+    top: 1.5%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-transform: uppercase;
@@ -31,29 +31,42 @@
     color: white;
 }
 .project_content_title {
-    margin: 0 auto;
-    background-color: rgba(3,41,165, .7);
+    margin: auto;
+    background-color: rgba(3,41,165, .65);
     width: 60%;
-    height: 20rem;
+    height: 18rem;
     color: white;
+    transition: all .3s ease-in-out;
 }
 
-/* .project_content_title_scn {
-    position: absolute;
-    top: 35rem;
-    left: 15%;
-    background-color: rgba(3,41,165, .7);
-    width: 60%;
-    height: 20rem;
-    color: white;
+
+.project_content_header {
+    background-color: rgba(3,41,165, .8);
 }
 
-.project_content_title_thr {
-    position: absolute;
-    top: 62rem;
-    left: 15%;
-    background-color: rgba(3,41,165, .7);
-    width: 60%;
-    height: 20rem;
-    color: white;
-} */
+.project_content_title:hover{
+    background-color: rgba(3,41,165, .8);
+    transform: scale(1.03);
+    cursor: pointer;
+}
+
+@media (min-width: 319.98px) and (max-width: 575.98px){ 
+    .card_project_content {
+        margin-top: 250px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    .card_project_content {
+        margin-top: 200px;
+        width: 95%;
+    }
+ }
+ @media (min-width: 768px) and (max-width: 991.98px) { 
+    .card_project_content {
+        margin-top: 100px;
+        width: 95%;
+    }
+}
+
