--- a/src/login/Login.styles.css
+++ b/src/login/Login.styles.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -16,7 +16,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
   padding: 15px;
 }
 #form {
@@ -24,6 +24,10 @@
   width: 100%;
   height: 100%;
   display: block;
+}
+.form-group {
+  color: skyblue;
+  font-size: 2em;
 }
 .form-group label {
   width: 100%;
@@ -58,6 +62,3 @@
   border-width: 1px;
   padding: 6px;
 }
-#hiddenButton {
-  display: none;
-} */
