conditional render log out button

--- a/src/login/Login.styles.css
+++ b/src/login/Login.styles.css
@@ -1,14 +1,14 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: monospace;
-} */
+}
 #container {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #333333;
+  background-color: #222222;
 }
 #login-container {
   width: 260px;
@@ -16,7 +16,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.1);
   padding: 15px;
 }
 #form {
@@ -26,21 +25,21 @@
   display: block;
 }
 .form-group {
-  color: skyblue;
+  color: #4285f4;
   font-size: 2em;
 }
 .form-group label {
   width: 100%;
   display: block;
   float: left;
-  color: #fff;
+  color: skyblue;
 }
 .form-group .form-control {
   text-align: center;
   margin: 1em 0;
   background-color: #222222;
-  color: #fff;
-  border: 0px solid #1e90ff;
+  color: #4285f4;
+  border: 0px solid #4285f4;
   padding: 7px;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -51,14 +50,14 @@
   display: block;
   margin: 1em auto;
   border: none;
-  background-color: #1e90ff;
+  background-color: #4285f4;
   color: #fff;
   font-size: 1em;
   outline: none;
   padding: 0.4em 1em;
 }
 .form-control:focus {
-  color: #1e90ff;
+  color: #4285f4;
   border-width: 1px;
   padding: 6px;
 }
