--- a/src/pages/news/News.styles.css
+++ b/src/pages/news/News.styles.css
@@ -11,9 +11,8 @@
 
 .icons {
   color: #c6d7e7;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   font-size: 1.3rem;
-  
 }
 
 .icons:hover {
