--- a/src/pages/calendar/Calendar.styles.css
+++ b/src/pages/calendar/Calendar.styles.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   position: relative;
-  background-image: url(../../images/landing05.jpg);
+  background-image: url(../../images/jpg/landings/landing05.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
