--- a/src/pages/home/Home.styles.css
+++ b/src/pages/home/Home.styles.css
@@ -26,22 +26,22 @@
 }
 
 .slideshow li:nth-child(1) {
-  background-image: url("../../images/landing01.jpg");
+  background-image: url("../../images/jpg/landings/landing01.jpg");
 }
 .slideshow li:nth-child(2) {
-  background-image: url("../../images/landing02.jpg");
+  background-image: url("../../images/jpg/landings/landing02.jpg");
   animation-delay: 5s;
 }
 .slideshow li:nth-child(3) {
-  background-image: url("../../images/landing03.jpg");
+  background-image: url("../../images/jpg/landings/landing03.jpg");
   animation-delay: 10s;
 }
 .slideshow li:nth-child(4) {
-  background-image: url("../../images/landing04.jpg");
+  background-image: url("../../images/jpg/landings/landing04.jpg");
   animation-delay: 15s;
 }
 .slideshow li:nth-child(5) {
-  background-image: url("../../images/landing05.jpg");
+  background-image: url("../../images/jpg/landings/landing05.jpg");
   animation-delay: 20s;
 }
 
