--- a/src/pages/projects/Projects.styles.css
+++ b/src/pages/projects/Projects.styles.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 1600px;
   position: relative;
-  background-image: url(../../images/landing03.jpg);
+  background-image: url(../../images/jpg/landings/landing03.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
