--- a/src/pages/projects/Projects.styles.css
+++ b/src/pages/projects/Projects.styles.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 1600px;
   position: relative;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/aviator-db.appspot.com/o/jpg%2Flandings%2Flanding03.jpg?alt=media&token=2d53ae5e-18a8-486c-8b6b-9839077dbb41");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
