grafted News page files as a template for Gallery & Projects pages -- Projects as a singleProject.js which needs tweaking -- and added an adminFormMethods.js file to eventually refactor / reuse admin form component methods

--- a/src/pages/catalog/Catalog.styles.css
+++ b/src/pages/catalog/Catalog.styles.css
@@ -1,13 +1,17 @@
 .pilot_images {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
 }
 .heading {
-    color: #22366e;
+  color: #22366e;
 }
 
 .airplain_background {
-    background-color: #1b62a5;
-    color: white;
+  background-color: #1b62a5;
+  color: white;
 }
 
+#flex {
+  display: flex;
+  justify-content: space-between;
+}
