--- a/src/pages/projects/Projects.styles.css
+++ b/src/pages/projects/Projects.styles.css
@@ -79,3 +79,21 @@
   display: flex;
   justify-content: space-between;
 }
+.modal {
+  text-align: center;
+  padding: 0 !important;
+}
+
+.modal:before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
